test/typechecker.d/invalid/sub0.souc.bad
subr(b: Bool): IO = do
	puts ""

main(): IO = do
	subr 4
